--- a/evaluation.html
+++ b/evaluation.html
@@ -157,21 +157,25 @@
           <tr>
             <td>1.1</td>
             <td>
-              Guideline 1.1 states that all non-text content that is presented to the user should have an alternative. Bedrunka makes use of alternative text for every image on the page and descriptive names for buttons and input fields.<br><br>
-              According to this guideline, all non-text content which is used only for decorative purposes should be implemented in a way it can be ignored by assistive technology. However, the header image and decorative ASCII art are still visible on assistive technology.<br><br>
-              Bedrunka does not provide time-based media, tests, sensory input, or CAPTCHA.
+              Guideline 1.1 states that all non-text content that is presented to the user should have an alternative. Bedrunka makes use of alternative text for every image on the page and descriptive names for buttons and input fields. (A)<br><br>
+              According to this guideline, all non-text content which is used only for decorative purposes should be implemented in a way it can be ignored by assistive technology. However, the header image and decorative ASCII art are still visible on assistive technology. (A)<br><br>
+              Bedrunka does not provide time-based media, tests, sensory input, or CAPTCHA. (A)
             </td>
           </tr>
           <tr>
             <td>1.3</td>
             <td>
-              All content on Bedrunka’s page is responsive in such a way that it can be read on any layout. Information is presented in text form and may provide an image with alternative text for clarification. Bedrunka does not use sensory characteristics for any information on the page.
+              All content on Bedrunka’s page is responsive in such a way that it can be read on any layout. (A) Information is presented in text form and may provide an image with alternative text for clarification. (A) Bedrunka does not use sensory characteristics for any information on the page. (A)
             </td>
           </tr>
           <tr>
             <td>1.4</td>
             <td>
               Bedrunka makes it easy for the users to distinguish content from the background by providing enough contrast in colour (AA). Only the “Delete Product” and “Reset Data” buttons do not provide enhanced contrast according to Level AAA.<br><br>
+              But color is not the only way information is conveyed to the user. (A).
+              <br><br>
+              There is not audio, thus no audio control. (A)
+              <br><br>
               Text is not justified and visible on 200 percent zoom without assistive technology, but the tables are only fully visible with horizontal scroll. The product returned from the search bar, however, does not provide a scrollbar and therefore the product is not entirely visible on 200 percent zoom. (AA)<br><br>
               No images of text are used to convey information except for any logos and there is no background audio. (AA)<br><br>
               No technique is used in CSS to ensure line spacing is at least space-and-a-half within paragraphs, and at least 1.5 times larger than the line spacing. (AAA)<br><br>
@@ -184,16 +188,16 @@
           <tr>
             <td>2.1</td>
             <td>
-              All Bedrunka’s functionality should be accessible by keyboard but fails to comply as a user is unable to delete a product, reset data, or edit a product using the keyboard only. Sorting a table, searching a product or adding one is keyboard accessible without requiring specific timings for individual keystrokes. (AAA)<br><br>
-              It is always possible for the user to unfocus when focussing an element using the keyboard, thus there is no keyboard trap.
+              All Bedrunka’s functionality should be accessible by keyboard but fails to comply as a user is unable to delete a product, reset data, or edit a product using the keyboard only. (A) Sorting a table, searching a product or adding one is keyboard accessible without requiring specific timings for individual keystrokes. (AAA)<br><br>
+              It is always possible for the user to unfocus when focussing an element using the keyboard, thus there is no keyboard trap. (A)
             </td>
           </tr>
           <tr>
             <td>2.4</td>
             <td>
-              All Bedrunka’s web pages, including the Bedrunka API, provide a descriptive title, including Bedrunka’s brand name.<br><br>
-              Navigation links are provided at the top of the page to skip blocks of content. The content itself is displayed in order and therefore the page can be navigated in a sequential focus order.<br><br>
-              Links provide descriptive text, so it is easy for the user to understand what it links to (AAA). Besides this, the user can also visit almost any part of the website using the correct URL (AAA) by manually scrolling to it (AA). Searching for a product and editing one are the only processes on our website. The user is not able to locate the result of every product unless a search is performed, and you can only update a product or cancel this process after the user has pressed the Edit Product button.<br><br>
+              All Bedrunka’s web pages, including the Bedrunka API, provide a descriptive title, including Bedrunka’s brand name. (A) <br><br>
+              Navigation links are provided at the top of the page to skip blocks of content. (A) The content itself is displayed in order and therefore the page can be navigated in a sequential focus order. (A)<br><br>
+              Links provide descriptive text, so it is easy for the user to understand what it links to (AAA). Besides this, the user can also visit almost any part of the website using the correct URL (AAA) by manually scrolling to it (AA). Searching for a product and editing one are the only processes on our website. The user is not able to locate the result of every product unless a search is performed, and you can only update a product or cancel this process after the user has pressed the Edit Product button. (AAA)<br><br>
               All headings and input labels are descriptive and are used to organize content (AA & AAA). Keyboard focus indicators are visible where necessary and links are visible at any time and the user can always deduct the purpose of the link before using it. (AA)
             </td>
           </tr>
