--- a/evaluation.html
+++ b/evaluation.html
@@ -181,7 +181,7 @@
             <td>1.4</td>
             <td>
               Bedrunka makes it easy for the users to distinguish content from the background by providing enough contrast in colour (AA). Only the “Delete Product” and “Reset Data” buttons do not provide enhanced contrast according to Level AAA.<br><br>
-              But color is not the only way information is conveyed to the user. (A).
+              But colour is not the only way information is conveyed to the user. (A).
               <br><br>
               There is not audio, thus no audio control. (A)
               <br><br>
