--- a/evaluation.html
+++ b/evaluation.html
@@ -73,7 +73,7 @@
         Users can add, edit, or delete products and if the user wants to find a specific product, one can search for a product by id.<br><br>
         All sections are separated by a descriptive header and are easy to find by using the navigation bar on top which contains links to each section.<br><br>
         The page does not contain audio and can be printed for essential information, which is shown on the page.<br><br>
-        Whole page was craeted by two students in just under a month of time. Limitations were that we had to learn and build the page from the scratch using the basics of our knowledge. The impact of it is that maybe the page does not look the best or could be improved in some aspects, but the page works correctly and is quite well done for such a short time period.
+        The page was created by two students in just under a month of time. Limitations were that we had to learn and build the page from the scratch using the basics of our knowledge. The impact of it is that maybe the page does not look the best or could be improved in some aspects, but the page works correctly and is quite well done for such a short time period.
       </p>
     </section>
 
@@ -83,7 +83,7 @@
         We want our page to be accessible to as many users as possible and therefore we can use the Web Content Accessibility Guidelines (WCAG) 2.0 to make sure this requirement is met.<br><br>
         The most important guideline is that all pieces of content should be easy to find on the page (2.4). If the user is unable to find something because of poor navigation or unclear design the user will likely not stay around and go to an alternative website.<br><br>
         Secondly, mobile browsers have surpassed desktop browsers in popularity, thus the web page should be viewable on more than one device, resolution, or aspect ratio (1.3). The webpage should be responsive to different layouts, so a user who uses a desktop, mobile phone, or someone who wants to print the page, can all view the website’s most important details.<br><br>
-        Because the user can input data on the website, it should be clear to the user what data can be submitted and what data cannot be submitted. Therefore, according to guideline 3.3, we have to provide and are providing error prevention.
+        Because the user can input data on the website, it should be clear to the user what data can be submitted and what data cannot be submitted. Therefore we are providing error prevention for form inputs. (3.3)
       </p>
     </section>
 
@@ -95,7 +95,7 @@
         to improve something and then we can go one by one and check the points off of the list.
       </p>
       <dl>
-        <h3>Accessibility part</h3>
+        <h3>Accessibility</h3>
         <dt>Remove decorative content when using assistive technology</dt>
         <dd>
           Remove header image and ASCII art from other media types using CSS media queries.
@@ -124,7 +124,7 @@
       </dl>
 
       <dl>
-        <h3>Usability part</h3>
+        <h3>Usability</h3>
         <dt>Addition of list-style-type</dt>
         <dd>
           Due to this small overlook on our side, we can easily add this in CSS to existing table. 
